[package]
name = "rs_algo"
version = "0.1.5"
authors = ["Joe Berria <joeberria@gmail.com>"]
description ="Common sorting algorithms and other common computer science algorithms."
readme = "README.md"
repository = "https://github.com/nexes/algo"
homepage = "https://github.com/nexes/algo"
keywords = ["merge", "quick", "insertion", "bubble", "algorithm"]
license = "MIT"

[dependencies]
